# 187-may-2026

./: README.md
17-05-26/Proyecto-MM-/practica1-main/: app.py  gestor_labiales.py  gestor_tareas.py  main.py  pyproject.toml
17-05-26/Proyecto-MM-/practica1-main/practica1/: main.py  pyproject.toml
17-05-26/Proyecto-MM-/practica1-main/templates/: base.html  labiales.html  login.html  paswoord.html  registro.html
