[project]
name = "practica1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "pymongo>=4.16.0",
    "render-template>=0.2.0",
    "requests>=2.33.1",
]

[tool.uv.workspace]
members = [
    "practica1",
]
